{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Touch",
            "id": "608ace37-73d4-47b6-94ce-7222d134184b",
            "actions": [
                {
                    "name": "FirstContact",
                    "type": "PassThrough",
                    "id": "101a3ddd-9cad-417c-98a0-3739c4112795",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "FirstPosition",
                    "type": "PassThrough",
                    "id": "56ceb425-10b1-401a-9b55-8566386d8b75",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ac9f1a64-6cdc-4d36-be32-73fa41be841e",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "833a42ca-f022-4561-b83d-ee6d8e7aefc7",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}